kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-logging
  labels:
    k8s-app: kibana-logging
#    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Kibana"
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: ui
  selector:
    k8s-app: kibana-logging
